# labby-voice

./: .gitignore  README.md
.github/: copilot-instructions.md
.github/workflows/: ci-cd.yml
app/: .dockerignore  .env.example  Dockerfile  app.py  pyproject.toml
app/bot/: agent.py  config.py
app/bot/tools/: azure_resources.py
app/call/: __init__.py  handler.py  media_stream.py
app/voice/: handler.py
appPackage/: manifest.json.bak  manifest.json.template
terraform/: locals.tf  main.tf  variables.tf
